# e-tranfser

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.json
migrations/: 0001_init.sql
scripts/: docker-compose.yml  init-test.sh
src/contracts/: Cargo.toml  build.rs
src/contracts/proto/: payment_manager.proto
src/contracts/src/: lib.rs
src/contracts/src/payment_manager/: mod.rs
src/contracts/src/protos/: mod.rs  payment_manager.rs
src/db/: Cargo.toml
src/db/src/: entities.rs  lib.rs
src/db/src/entities/: mod.rs  v1.rs
src/domain/: Cargo.toml
src/domain/src/: lib.rs
src/gateway/: Cargo.toml
src/gateway/src/: lib.rs  log.rs  main.rs  root_span.rs
src/gateway/src/api/: create_payment.rs  deposit_payment.rs  mod.rs  register.rs  tl_webhooks.rs
src/gateway/src/api/create_payment/: mod.rs
src/gateway/src/app/: component.rs  deposit.rs  depsoit_select_account.rs  home.rs  mod.rs  not_found.rs  payment.rs  payment_sent.rs  regeister.rs  tl_callback.rs  tl_data_callback.rs
src/gateway/src/app/admin/: admin_home.rs  admin_login_.rs  admin_payment.rs  admin_payments.rs  admin_user.rs  admin_users.rs  auth.rs  mod.rs  payment.rs
src/gateway/src/app/deposit_flow/: create_payout.rs  deposit_form.rs  deposit_status.rs  depsoit_select_account.rs  mod.rs  tl_despoit_callback.rs  z04_depsoit_select_account.rs
src/gateway/src/app/payment_flow/: mod.rs  payment_form.rs  payment_status.rs  tl_payment_callback.rs  z01_payment_form.rs  z02_create_payment.rs  z04_payment_status.rs
src/gateway/src/app/registration_flow/: email_code.rs  mod.rs  register.rs  registration_form.rs
src/gateway/src/db/: entities.rs  mod.rs
src/gateway/src/truelayer/: client.rs  mod.rs  model.rs
src/integration-tests/: Cargo.toml
src/integration-tests/src/: enviornment.rs  lib.rs
src/integration-tests/src/tl_mock/: auth.rs  create_payment.rs  create_payout.rs  mod.rs  state.rs
src/integration-tests/tests/: create_payment.rs  readiness.rs
src/payment-manager/: Cargo.toml
src/payment-manager/src/: lib.rs  log.rs  main.rs  my_payment_manager.rs  otel.rs
src/payment-manager/src/handlers/: create_payment.rs  create_payout.rs  mod.rs
src/truelayer/: Cargo.toml
src/truelayer/src/: client.rs  error.rs  lib.rs
