[workspace]
members = [
  "src/gateway",
  "src/integration-tests"
]
resolver = "2"

[workspace.dependencies]
# Local
gateway = { path = "src/gateway" }

# External
actix-web = "4"
actix-web-opentelemetry = "0.15"
anyhow = "1"
argon2 = "0.5"
config = "0.13"
leptos = "0.5"
opentelemetry = "0.20"
opentelemetry-jaeger = "0.19"
reqwest = "0.11"
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
reqwest-tracing = "0.4"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
sqlx = { version = "0.7", default-features = false}
thiserror = "1"
tokio = "1"
tokio-postgres = "0.7"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.21"
tracing-subscriber = "0.3"
uuid = "1"
