[workspace]
members = ["src/gateway", "src/integration-tests"]
resolver = "2"

[workspace.dependencies]
# Local
gateway = { path = "src/gateway" }

# External
actix-web = "4"
actix-web-opentelemetry = "0.17"
anyhow = "1"
argon2 = "0.5"
config = "0.14"
futures = "0.3"
leptos = "0.6"
opentelemetry = "0.22"
opentelemetry_sdk = "0.22"
opentelemetry-otlp = "0.15.0"
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry-stdout = "0.3"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
reqwest-tracing = "0.5"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
sqlx = { version = "0.7", default-features = false }
thiserror = "1"
tokio = "1"
tokio-postgres = "0.7"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.23"
tracing-subscriber = "0.3"
truelayer-signing = "0.2"
uuid = "1"
