[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local
domain = { workspace = true }

# External
anyhow = { workspace = true }
chrono = { workspace = true, default-features = false }
prost = "0.12"
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
