[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# External
actix-web = { workspace = true }
actix-web-opentelemetry = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true, features = ["collector_client", "reqwest_collector_client", "rt-tokio"] }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true, features = ["with-uuid-1"] }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
