[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
db = { workspace = true }
domain = { workspace = true }
truelayer = { workspace = true }

# External
actix-web = { workspace = true, features = ["cookies"] }
actix-web-opentelemetry = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true, default-features = false }
config = { workspace = true }
email_address = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
leptos = { workspace = true }
lettre = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["tonic"] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-stdout = { workspace = true, features = ["trace"] }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
truelayer-signing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
