[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
gateway = { workspace = true }

# External
actix-web = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true, default-features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true, features = ["with-uuid-1"] }
uuid = { workspace = true, features = ["v4", "serde"] }
