[package]
name = "payment-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local
contracts = { workspace = true }
db = { workspace = true }
domain = { workspace = true }
truelayer = { workspace = true }

# External
anyhow = { workspace = true }
chrono = { workspace = true, default-features = false }
config = { workspace = true }
opentelemetry = { workspace = true, default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = [
    "reqwest-client",
    "reqwest-rustls",
    "http-proto",
    "tls",
] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-stdout = { workspace = true, features = ["trace"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
